# adventofcode2023

./: .gitignore  CMakeLists.txt  CMakePresets.json  linux.cmake  windows.cmake
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
